--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .header, .main, .footer {
     background: #1f2937;
 }
 
 .header-text, .main-title {
     color: #f9faf8;
+}
+
+.header-text {
+    font-family: Roboto, sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
 }
