--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .header, .main, .footer {
     background: #1f2937;
 }
@@ -8,8 +15,13 @@
     color: #f9faf8;
 }
 
+
 .header-text {
     font-family: Roboto, sans-serif;
-    font-size: 48px;
+    font-size: 24px;
     font-weight: bolder;
+}
+
+ul {
+    list-style-type: none;
 }
