--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,46 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: Roboto, sans-serif;
+
 }
 
 .header, .main, .footer {
     background: #1f2937;
+    padding: 40px;
+    display: flex;
+    justify-content: space-evenly;
+    
 }
 
 .header-text, .main-title {
     color: #f9faf8;
 }
 
+.header {
+    display: flex;
+    align-items: center;
+}
 
 .header-text {
-    font-family: Roboto, sans-serif;
     font-size: 24px;
     font-weight: bolder;
+    display: flex;
+    flex-wrap: nowrap;
 }
+
 
 ul {
     list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10px;
+    
+}
+
+a {
+    text-decoration: none;
+    font-size: 18px;
+    color: #e5e7eb;
+
 }
