--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     background: #1f2937;
     padding: 40px;
     display: flex;
-    flex-grow: 1;
+    
 }
 
 .header-text, .main-words {
@@ -25,6 +25,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 50px;
+
 }
 
 .header-text {
@@ -57,14 +59,15 @@ a {
 .main {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 30px;
+
 }
 
 .main-words {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    flex-shrink: 1;
 }
 
 .main-title {
@@ -96,12 +99,18 @@ button {
     color: white;
 }
 
+.info-section {
+    display: flex;
+    padding: 40px;
+    flex-direction: column;
+}
+
+
 .info-title {
     font-size: 36px;
     font-weight: bolder;
     display: flex;
     justify-content: center;
-    margin: 20px;
     padding: 20px;
 }
 
@@ -113,9 +122,7 @@ button {
     justify-content: center;
     align-items: baseline;
     gap: 40px;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 40px;
+    flex-grow: 1;
 
 }
 
@@ -139,6 +146,7 @@ button {
     display: flex;
     padding: 100px;
     flex-direction: column;
+    justify-content: center;
   }
 
   .quote-text {
@@ -151,3 +159,39 @@ button {
     font-size: 18px;
     font-weight: bold;
   }
+
+.bottom {
+    background: white;
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+
+  .bottom-section {
+    background: royalblue;
+    max-height: 200px;
+    display: flex;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    padding: 50px;    
+    margin-top: 30px;
+    margin-bottom: 40px;
+    border-radius: 8px;
+  }
+
+  
+  .join-button {
+    background: royalblue;
+    border: 1px solid white;
+    color: white;
+    
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    color: white;
+}
